# ProjetsClion

Algo/: CMakeLists.txt
ControleTP3_IHM/: CMakeLists.txt
MarioJeuxV2/: Background.hpp  CMakeLists.txt  Character.hpp  Game.hpp  HUD.hpp  KeyboardInput.hpp  Menu.hpp  Tilemap.hpp  main.cpp
MarioJeuxV2/maps/: map1.txt  map2.txt
TD1_IHM/: CMakeLists.txt
TD2_IHM/: CMakeLists.txt
TD2_IHM/Exercice1/: event.hpp  event_manager.hpp  main.cpp  turnstile.hpp
TD2_IHM/Exercice2/: main.cpp
TD2_IHM_Exo3/: CMakeLists.txt  event_manager.hpp  main.cpp  regular_language.hpp
TD3_Couleurs_paletteCouleurs/: CMakeLists.txt  application.hpp  main.cpp  paletteCouleurs.hpp
TD3_Graphique/: CMakeLists.txt  Ellipse.hpp  application.hpp  circle.hpp  polygons.hpp  square.h  triangles.hpp
TD3_Graphique_Couleurs/: CMakeLists.txt  application.hpp  cerclesTransparents.hpp  matriceRougeBleu.hpp  vecteurGris.hpp
TD3_IHM_COULEURS_CerclesTransparents/: CMakeLists.txt  application.hpp  cerclesTransparents.hpp
TD4_Ball/: application.hpp  ball.hpp  main.cpp  observer.hpp  scene.hpp
TD4_Scene/: CMakeLists.txt  application.hpp  ball.hpp  box.hpp  matriceBox.hpp  observer.hpp  palette.txt  scene.hpp
TD5_Sons/: CMakeLists.txt  MusicRecord.hpp  application.cpp  application.hpp
controleTP/: CMakeLists.txt
controleTP/exo1-A/: application
controleTP/exo1-A/src/: application.hpp  scene.hpp
controleTP/exo2-A/: application
controleTP/exo2-A/src/: scene.hpp
controleTP/exo3-A/: application  makefile
controleTP/exo3-A/src/: application.hpp  scene.hpp
controleTP_2/: CMakeLists.txt  test.cc
helloWorld/: CMakeLists.txt
marioProject/: CMakeLists.txt  application  makefile
marioProject/maps/: map1.txt  map2_3.txt
marioProject/src/: Background.cpp  Background.hpp  Character.cpp  Character.hpp  Game.cpp  Game.hpp  GameSound.cpp  GameSound.hpp  Goomba.cpp  Goomba.hpp  HUD.cpp  HUD.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Tilemap.cpp  Tilemap.hpp  main.cpp
projetMario_IHM_2016/: Background.hpp  CMakeLists.txt  Character.hpp  KeyboardInput.hpp  Tilemap.hpp  main.cpp  main.hpp
projetMario_IHM_2016/graphics/: .directory
projetMario_IHM_2016/maps/: map1.txt  map2.txt
projetSEieee/: CMakeLists.txt  main  projetIEEE_754_PierreKURZAWSKI  projetIEEE_754_PierreKURZAWSKI.cpp
testSFML/: CMakeLists.txt  main.cpp
